--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pg": "^8.16.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "uuid": "^11.1.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
