Prepared for Railway deployment

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # PostgreSQL URL from Render
-DATABASE_URL=postgresql://postgres:tvZIgJHVeNnOtNEEnsHJAsrJdbprJSDE@shortline.proxy.rlwy.net:35004/railway
+DATABASE_URL=postgresql://majitrack_db_a9ty_user:7CXrJCaLGogU7DhON0APjw5UiYDbQCXV@dpg-d1np7tidbo4c73eso0vg-a.oregon-postgres.render.com/majitrack_db_a9ty
 
 # Other settings
 PORT=5000
