updated admin response models, controllers and routes

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # PostgreSQL URL from Render
-DATABASE_URL=postgresql://majitrack_db_a9ty_user:7CXrJCaLGogU7DhON0APjw5UiYDbQCXV@dpg-d1np7tidbo4c73eso0vg-a.oregon-postgres.render.com/majitrack_db_a9ty
+DATABASE_URL=postgresql://majitrack_db_d1t9_user:N87nx2GrMMaTzj804B2yzAke8KYvUhG6@dpg-d2c4iq3uibrs73848000-a.oregon-postgres.render.com/majitrack_db_d1t9
 
 # Other settings
 PORT=5000
